[gd_scene load_steps=8 format=2]

[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=1]
[ext_resource path="res://backgounds/night-sky-at-ceres.jpg" type="Texture" id=2]
[ext_resource path="res://levels/ui/remap.gd" type="Script" id=3]
[ext_resource path="res://fonts/start.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.8, 0, 1 )

[node name="Scene" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = -640.0
margin_bottom = -360.0
script = ExtResource( 3 )

[node name="Night Sky" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )

[node name="Game name" type="Label" parent="."]
margin_top = 3.0
margin_right = 1280.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 5 )
text = "BUTTON_REMAP"
align = 1
valign = 1

[node name="Bottomhud" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 126.0
margin_top = 106.0
margin_right = 1172.0
margin_bottom = 682.0

[node name="Shoot" type="Button" parent="VBoxContainer"]
margin_right = 1046.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "Shoot"

[node name="Jump" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 1046.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
text = "Jump"

[node name="Item" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 1046.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
disabled = true
text = "Item"

[node name="Switch" type="Button" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 1046.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
text = "Switch"

[node name="Special" type="Button" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 1046.0
margin_bottom = 286.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
disabled = true
text = "Special"

[node name="Pause" type="Button" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 1046.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
text = "Pause"

[node name="Backpack" type="Button" parent="VBoxContainer"]
margin_top = 348.0
margin_right = 1046.0
margin_bottom = 402.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
disabled = true
text = "Backpack"

[node name="OCSkill" type="Button" parent="VBoxContainer"]
margin_top = 406.0
margin_right = 1046.0
margin_bottom = 460.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
disabled = true
text = "OC Skill"

[node name="Run" type="Button" parent="VBoxContainer"]
margin_top = 464.0
margin_right = 1046.0
margin_bottom = 518.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
text = "Run"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 522.0
margin_right = 1046.0
margin_bottom = 576.0
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 3 )
text = "BUTTON_RETURN"

[connection signal="pressed" from="VBoxContainer/Shoot" to="." method="_on_Shoot_pressed"]
[connection signal="pressed" from="VBoxContainer/Jump" to="." method="_on_Jump_pressed"]
[connection signal="pressed" from="VBoxContainer/Switch" to="." method="_on_Switch_pressed"]
[connection signal="pressed" from="VBoxContainer/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="VBoxContainer/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
